# LittleHttpServer

./: README.md  filehandler.py  handler.py  handler_utils.py  json_handler.py  main.py  pyproject.toml  server.py  utils.py
assets/: 404.html  error.html
src/: server.py  utils.py
test/: test.html
tests/: test_utils.py
