[project]
name = "littlehttpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama==0.4.6",
    "exceptiongroup==1.3.0",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "tomli==2.3.0",
    "typing-extensions==4.15.0",
]
